assets/styles/header.css
.nav {
  padding: var(--grid-margin-vertical) var(--grid-margin-horizontal);
}
header,
body {
  width: 100%;
}
.nav__items,
.nav__links {
  display: flex;
  align-items: center;
  list-style: none;
  padding: 0;
}
.nav__logo {
  margin-right: auto;
  height: 44px;
}
.nav__menu {
  cursor: pointer;
}
.nav__menu img {
  height: 17px;
}
.nav__links {
  gap: 48px;
}
.nav__link a {
  text-decoration: none;
  color: var(--dark-grayish-blue);
}

/* Mobile Styles */
.nav__links--mobile .nav__link:nth-of-type(n + 2) {
  position: absolute !important; /* Outside the DOM flow */
  height: 1px;
  width: 1px; /* Nearly collapsed */
  overflow: hidden;
  clip: rect(1px 1px 1px 1px); /* IE 7+ only support clip without commas */
  clip: rect(1px, 1px, 1px, 1px); /* All other browsers */
}
.nav__links--mobile-expanded {
  display: flex;
  flex-direction: column;
  position: fixed;
  right: 0;
  top: 0;
  bottom: 0;
  padding: calc(13.5px + var(--grid-margin-vertical))
    var(--grid-margin-horizontal);

  align-items: flex-start;
  width: 60%;
  background-color: var(--off-white);
}
.nav__links--mobile-expanded .nav__menu {
  align-self: flex-end;
}
.body-filter--active {
  position: fixed;
  inset: 0;
  content: "";
  background-color: var(--translucent);
}
.no-display {
  display: none;
}
@media screen and (min-width: 600px) {
  .nav__link:first-child {
    display: none;
  }
}

